*SVN*

* Add Array#split for dividing arrays into one or more subarrays by value or block. [Sam Stephenson]

*1.3.1* (April 6th, 2006)

* Clean paths inside of exception messages and traces. [Nicholas Seckar]

* Add Pathname.clean_within for cleaning all the paths inside of a string. [Nicholas Seckar]

* provide an empty Dependencies::LoadingModule.load which prints deprecation warnings.  Lets 1.0 applications function with .13-style environment.rb.


*1.3.0* (March 27th, 2006)

* When possible, avoid incorrectly obtaining constants from parent modules. Fixes #4221. [Nicholas Seckar]

* Add more tests for dependencies; refactor existing cases. [Nicholas Seckar]

* Move Module#parent and Module#as_load_path into core_ext. Add Module#parent. [Nicholas Seckar]

* Add CachingTools::HashCaching to simplify the creation of nested, autofilling hashes. [Nicholas Seckar]

* Remove a hack intended to avoid unloading the same class twice, but which would not work anyways. [Nicholas Seckar]

* Update Object.subclasses_of to locate nested classes. This affects Object.remove_subclasses_of in that nested classes will now be unloaded. [Nicholas Seckar]

* Update Object.remove_subclasses_of to use Class.remove_class, reducing duplication. [Nicholas Seckar]

* Added Fixnum#seconds for consistency, so you can say 5.minutes + 30.seconds instead of 5.minutes + 30 #4389 [François Beausoleil]

* Added option to String#camelize to generate lower-cased camel case by passing in :lower, like "super_man".camelize(:lower) # => "superMan" [DHH]

* Added Hash#diff to show the difference between two hashes [Chris McGrath]

* Added Time#advance to do precise time time calculations for cases where a month being approximated to 30 days won't do #1860 [Rick Olson]

* Enhance Inflector.underscore to convert '-' into '_' (as the inverse of Inflector.dasherize) [Jamis Buck]
