@@ -1,5 +1,7 @@
 *SVN*
 
+* Updated to Builder 2.0 [DHH]
+
 * Add Array#split for dividing arrays into one or more subarrays by value or block. [Sam Stephenson]
 
 *1.3.1* (April 6th, 2006)
